tests/sumo/errors/too_many_teleports/output.sumo
Loading net-file from 'net.net.xml'... done (2ms).
Loading done.
Simulation started with time: 0.00
Simulation ended at time: 2597.00
Reason: Too many teleports.
Performance: 
 Duration: 607ms
 Real time factor: 4278.42
 UPS: 494395.387150
Vehicles: 
 Inserted: 204 (Loaded: 250)
 Running: 202
 Waiting: 46
Teleports: 6 (Jam: 1, Yield: 3, Wrong Lane: 2)

